		* This is needed because the original prediction system could not distinguish between the player and the camera, leading to extremely choppy gameplay at a 10Hz tick rate when
		the player was in a non-normal camera type
	* A dedicated server binary, on Windows as well as Linux...
	* Renamed host_speeds cvar to profile_all
		* Improved strings to be more verbose and use fractions of milliseconds
	* Implemented localisation into the game
		* The language is controlled by the language cvar
		* Strings are loaded from text\<language->value>\strings.txt (max 1024 strings, 64 key length and 512 key value)
		* They are referred to using the syntax [STRING_KEY] in code. The localisation system will then obtain the value and cache it in case it gets called on again.
		* A maximum of 1,024 localisation strings can be loaded at any one (this limit is also applied to the cached localised strings)
			* A list of dynamically allocated localised strings is kept and added to when a string key that has not been previously localised is found. 
			* Localised strings are cached in memory and returned if the localisation string has already been cached.
	* Made the engine game-agnostic
		* Changed references to Zombono to the value of the name field of the gameinfo_t structure (loaded from gameinfo.json)
	* Changed build output directory from $(SolutionDir)/build/out to $(SolutionDir)/build/$(Configuration)
		* This was meant to be temporary but took 7 months to change...
	* Changed game binary name to be EuphoriaEngine.exe as this engine will be used for many games to come (hopefully)
	* Changed intro graphic
	* Made the engine version a cvar
	* Renamed many gamedll functions for consistency
	* Wrote a tool to generate an updateinfo.json file automatically:
		* Changed the updater to use automatically generated updateinfo.json files
	* Added the time of build to the version cvar
	* Refactored gamemodes
		* Each gamemode now has its own player spawn and update code